Fix support for Clojure 1.1.0 & Base 64 containing newlines