@@ -1,23 +1,72 @@
-(defproject k2n/saml20-clj "0.1.9"
-  :description "Basic SAML 2.0 library for SSO."
-  :url "https://github.com/k2n/saml20-clj"
+(defproject metabase/saml20-clj "0.1.10-SNAPSHOT"
+  :description "Improved SAML 2.0 library for SSO."
+  :url "https://github.com/metabase/saml20-clj"
+  :min-lein-version "2.5.0"
+
   :license {:name "Eclipse Public License"
-            :url "http://www.eclipse.org/legal/epl-v10.html"}
-  :source-paths ["src"]
-  :deploy-repositories [["releases" :clojars]]
-  :dependencies [[org.clojure/clojure "1.8.0"]
-                 [clj-time "0.11.0"]
-                 [ring "1.4.0"]
-                 [org.apache.santuario/xmlsec "2.0.4"]
-                 [compojure "1.5.0"]
-                 [org.opensaml/opensaml "2.6.4"]
-                 [org.clojure/data.xml "0.0.7"]
-                 [org.clojure/data.codec "0.1.0"]
-                 [org.clojure/data.zip "0.1.1"]
-                 [org.vlacs/helmsman "1.0.0-alpha5"]]
-  :pedantic :warn
-  :profiles {:dev {:source-paths ["dev" "test"]
-                   :dependencies [[org.clojure/tools.namespace "0.2.10"]
-                                  [org.clojure/tools.nrepl "0.2.3"]
-                                  [hiccup "1.0.5"]
-                                  [http-kit "2.1.18"]]}})
+            :url "https://raw.githubusercontent.com/metabase/saml20-clj/master/LICENSE"}
+
+  :aliases
+  {"test"                      ["with-profile" "+expectations" "expectations"]
+   "bikeshed"                  ["with-profile" "+bikeshed" "bikeshed" "--max-line-length" "120"]
+   "check-namespace-decls"     ["with-profile" "+check-namespace-decls" "check-namespace-decls"]
+   "eastwood"                  ["with-profile" "+eastwood" "eastwood"]
+   "check-reflection-warnings" ["with-profile" "+reflection-warnings" "check"]
+   ;; `lein lint` will run all linters
+   "lint"                      ["do" ["eastwood"] ["bikeshed"] ["check-namespace-decls"]]}
+
+  :dependencies
+  [[org.clojure/data.xml "0.0.8"]
+   [org.clojure/data.zip "0.1.3"]
+   [clj-time "0.15.1"]
+   [compojure "1.6.1"]
+   [hiccup "1.0.5"]
+   [org.apache.santuario/xmlsec "2.1.3"]
+   [org.opensaml/opensaml "2.6.4"]
+   [org.vlacs/helmsman "1.0.0-alpha5"]
+   [ring "1.7.1"]]
+
+  :profiles
+  {:dev
+   {:dependencies
+    [[org.clojure/clojure "1.10.1"]
+     [expectations "2.2.0-beta2"]]
+
+    :injections
+    [(require 'expectations)
+     ((resolve 'expectations/disable-run-on-shutdown))]
+
+    :jvm-opts
+    ["-Xverify:none"]}
+
+   :expectations
+   {:plugins [[lein-expectations "0.0.8" :exclusions [expectations]]]}
+
+   :eastwood
+   {:plugins
+    [[jonase/eastwood "0.3.5" :exclusions [org.clojure/clojure]]]
+
+    :add-linters
+    [:unused-private-vars
+     :unused-namespaces
+     :unused-fn-args
+     :unused-locals]
+
+    :exclude-linters
+    [:deprecations]}
+
+   :bikeshed
+   {:plugins
+    [[lein-bikeshed "0.5.2"]]}
+
+   :check-namespace-decls
+   {:plugins               [[lein-check-namespace-decls "1.0.2"]]
+    :source-paths          ["test"]
+    :check-namespace-decls {:prefix-rewriting true}}}
+
+  :deploy-repositories
+  [["clojars"
+    {:url           "https://clojars.org/repo"
+     :username      :env/clojars_username
+     :password      :env/clojars_password
+     :sign-releases false}]])
